<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="tab_text_1">Learning Leaders</string>
    <string name="tab_text_2">Skill IQ Leader</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="firstname">Firstname</string>
    <string name="lastname">Lastname</string>
    <string name="email">Email</string>
    <string name="github_url">Github URL</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="submit">Submit</string>
</resources>
